--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>DASH IF Test Assets Database</title>
+    <title>VR IF Test Assets Database</title>
 
     <!-- Bootstrap -->
     <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -68,6 +68,7 @@
                         <li><a href="#testcontent/list">List</a></li>
                         <li class="member"><a href="#testcontent/create">Create</a></li>
                         <li class="member"><a href="#testcontent/mylist">My Testcontents</a></li>
+                        <li class="member"><a href="#testcontent/uploadcontent">Upload Contents</a></li>
                     </ul>
                 </li>
             </ul>
